subdir('libp2p/conn')
subdir('libp2p/crypto')
subdir('libp2p/db')
subdir('libp2p/hashmap')
subdir('libp2p/identify')
subdir('libp2p/net')
subdir('libp2p/nodeio')
subdir('libp2p/os')
subdir('libp2p/peer')
subdir('libp2p/record')
subdir('libp2p/routing')
subdir('libp2p/secio')
subdir('libp2p/swarm')
subdir('libp2p/utils')
subdir('libp2p/yamux')
