test_errors_string = executable('test_errors_string', 'c/test_errors_string.c', include_directories: multihash_inc, link_with: multihash_lib)
test('multihash test_errors_string', test_errors_string)

test_hashes_code = executable('test_hashes_code', 'c/test_hashes_code.c', include_directories: multihash_inc, link_with: multihash_lib)
test('multihash test_hashes_code', test_hashes_code)

test_hashes_length = executable('test_hashes_length', 'c/test_hashes_length.c', include_directories: multihash_inc, link_with: multihash_lib)
test('multihash test_hashes_length', test_hashes_length)

